# nuGPR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: cuda_env.h  device_common.cuh  rmm.h
include/adam/: adam.h
include/gpdata/: gp.h
include/gpmodel/: device_rep.h  model.h  precond.h  solver.h  super_cholesky.h
src/: device_functions.cuh
src/adam/: adam.cu
src/gpdata/: gp.cu
src/gpmodel/: device_rep.cu  model.cu  precond.cu  solver.cu  super_cholesky.cu
tests/: CMakeLists.txt  adam.test.cpp  device_functions.test.cpp  device_rep.test.cpp  device_test_helper.cu  device_test_helper.h  main.cpp  model.test.cpp  precond_solver.test.cpp  test_helper.cpp  test_helper.h
